Changes in version 1.8.0
------------------------

- Support for off-target reads in copy number normalization and segmentation
- Added mutation burden calculation
- Code cleanups (switch to GRanges where possible, switch to optparse in 
  command line tools)
- More robust mapping bias estimation
- Added support for CNVkit coverage files (*.cnn, *.cnr)
- IntervalFile.R can annotate targets with gene symbols
- Better artifact filtering by using normalDB more efficiently
- Support for mappability scores

API CHANGES

- Due to novel optimizations of provided bait intervals, we recommend 
  to regenerate the normal databases.
- New function: callMutationBurden
- Defunct functions: createSNPBlacklist, getDiploid, autoCurateResults
- Changed defaults: 
    - min.normals 2 (from 4) in setMappingBiasVcf
    - normalDB.min.coverage 0.25 (from 0.2) in filterTargets
- Minor changes: 
    - Removed gc.data from filterTargets since gc_bias is now added to tumor 
      coverage
    - dropped purecn.output from correctCoverageBias (no two-pass anymore)
    - Coverage.R argument --gatkcoverage renamed to --coverage
    - Dropped GC-normalization functionality in NormalDB, since this is 
      now conveniently done in Coverage.R
 
PLANNED FEATURES FOR 1.8

- Better sample summary statistics, like mutation burden, chromosomal 
  instability
- Better performance in low purity samples 
- Better performance in high purity samples with significant heterogeneity  
- LOH database
- Switch to S4 data structures (maybe)
- Whole dataset visualizations (maybe)
- Better support for known, small deletions and amplifications (e.g. EGFRvIII,
  MYC)
- Support for GATK4
- Better runtime performance by ignoring unlikely solutions early