@@ -4,47 +4,41 @@ suppressPackageStartupMessages(library(futile.logger))
 ### Parsing command line ------------------------------------------------------
 
 option_list <- list(
-    make_option(c("-v", "--version"), action="store_true", default=FALSE, 
-        help="Print PureCN version"),
-    make_option(c("-f", "--force"), action="store_true", default=FALSE, 
-        help="Overwrite existing files"),
-    make_option(c("--seed"), action="store", type="integer", default=NULL,
-        help="Seed for random number generator [default %default]"),
-    make_option(c("--normal"), action="store", type="character", default=NULL,
-        help="Input normal coverage, GC-normalized. Optional if normaldb or segfile is provided."),
-    make_option(c("--tumor"), action="store", type="character", default=NULL,
-        help="Input tumor coverage, GC-normalized"),
-    make_option(c("--vcf"), action="store", type="character", default=NULL,
-        help="Input VCF file"),
     make_option(c("-i", "--sampleid"), action="store", type="character", default=NULL,
         help="Sample id"),
+    make_option(c("--normal"), action="store", type="character", default=NULL,
+        help="Input: normal coverage, GC-normalized. Optional if normaldb or segfile is provided."),
+    make_option(c("--tumor"), action="store", type="character", default=NULL,
+        help="Input: tumor coverage, GC-normalized"),
+    make_option(c("--vcf"), action="store", type="character", default=NULL,
+        help="Input: VCF file"),
     make_option(c("--rds"), action="store", type="character", default=NULL,
-        help="PureCN output RDS file, used to regenerate plots and files after manual curation"),
-    make_option(c("--genome"), action="store", type="character", default=NULL,
-        help="Genome version [default %default]"),
-    make_option(c("--gcgene"), action="store", type="character", default=NULL,
-        help="Interval file as generated by IntervalFile.R"),
-    make_option(c("--segfile"), action="store", type="character", default=NULL,
-        help="Segmentation file"),
-    make_option(c("--snpblacklist"), action="store", type="character", default=NULL,
-        help="File parsable by rtracklayer that defines blacklisted SNP regions"),
+        help="Input: PureCN output RDS file, used to regenerate plots and files after manual curation"),
     make_option(c("--normal_panel"), action="store", type="character", default=NULL,
-        help="VCF containing calls from a panel of normals, for example generated by GATK CombineVariants."),
-    make_option(c("--statsfile"), action="store", type="character", default=NULL,
-        help="MuTect stats file, used to filter artifacts"),
-    make_option(c("--targetweightfile"), action="store", type="character", default=NULL,
-        help="Weights of targets in segmentation. Generated by NormalDB.R."),
-    make_option(c("--funsegmentation"), action="store", type="character", default="CBS",
-        help="Segmentation function. CBS, PSCBS or none [default %default]"),
-    make_option(c("--alpha"), action="store", type="double", 
-        default=formals(PureCN::segmentationCBS)$alpha,
-        help="Segmentation parameter, significance of breakpoints [default %default]"),
+        help="Input: VCF containing calls from a panel of normals, for example generated by GATK CombineVariants."),
     make_option(c("--normaldb"), action="store", type="character", default=NULL,
-        help="NormalDB.rds file. Generated by NormalDB.R."),
+        help="Input: NormalDB.rds file. Generated by NormalDB.R."),
     make_option(c("--pool"), action="store", type="integer", default=10,
         help="Pool n best normals for log-ratio calculation [default %default]"),
+    make_option(c("--genome"), action="store", type="character", default=NULL,
+        help="Assay: Genome version [default %default]"),
+    make_option(c("--gcgene"), action="store", type="character", default=NULL,
+        help="Assay: Interval file as generated by IntervalFile.R"),
+    make_option(c("--segfile"), action="store", type="character", default=NULL,
+        help="Segmentation file"),
+    make_option(c("--statsfile"), action="store", type="character", default=NULL,
+        help="VCF Filter: MuTect stats file, used to filter artifacts"),
     make_option(c("--minaf"), action="store", type="double", default=0.03,
-        help="Pool n best normals for log-ratio calculation [default %default]"),
+        help="VCF Filter: minimum allelic fraction [default %default]"),
+    make_option(c("--snpblacklist"), action="store", type="character", default=NULL,
+        help="VCF Filter: File parsable by rtracklayer that defines blacklisted regions"),
+    make_option(c("--funsegmentation"), action="store", type="character", default="CBS",
+        help="Segmentation: Algorithm. CBS, PSCBS or none [default %default]"),
+    make_option(c("--alpha"), action="store", type="double", 
+        default=formals(PureCN::segmentationCBS)$alpha,
+        help="Segmentation: significance of breakpoints [default %default]"),
+    make_option(c("--targetweightfile"), action="store", type="character", default=NULL,
+        help="Segmentation: Weights of targets. Generated by NormalDB.R."),
     make_option(c("--minpurity"), action="store", type="double", 
         default=formals(PureCN::runAbsoluteCN)$test.purity[[2]],
         help="Minimum considered purity [default %default]"),
@@ -62,14 +56,17 @@ option_list <- list(
     make_option(c("--model"), action="store", type="character", 
         default=formals(PureCN::runAbsoluteCN)$model[[2]],
         help="Model used to fit variants. Either beta or betabin [default %default]."),
-    make_option(c("--method"), action="store", 
-        default=formals(PureCN::correctCoverageBias)$method[[2]], 
-        help="Include off-target regions [default %default]"),
     make_option(c("--outvcf"), action="store_true", default=FALSE,
-        help="Annotate input VCF with posterior probabilities. Otherwise produce CSV file."),
+        help="Output: Annotate input VCF with posterior probabilities. Otherwise produce CSV file."),
     make_option(c("--out"), action="store", type="character", default=NULL,
-        help=paste("File name prefix to which results should be written.",
-        "If out is a directory, will use out/sampleid."))
+        help=paste("Output: File name prefix to which results should be written.",
+        "If out is a directory, will use out/sampleid.")),
+    make_option(c("--seed"), action="store", type="integer", default=NULL,
+        help="Seed for random number generator [default %default]"),
+    make_option(c("-v", "--version"), action="store_true", default=FALSE, 
+        help="Print PureCN version"),
+    make_option(c("-f", "--force"), action="store_true", default=FALSE, 
+        help="Overwrite existing files")
 )
 
 opt <- parse_args(OptionParser(option_list=option_list))
@@ -84,30 +81,23 @@ if (!is.null(opt$seed)) {
 }
     
 tumor.coverage.file <- opt$tumor
-tumor.vcf <- opt$vcf
-genome <- opt$genome
-gc.gene.file <- opt$gcgene
+normal.coverage.file <- opt[["normal"]]
 snp.blacklist <- opt$snpblacklist
 
 if (!is.null(snp.blacklist)) {
     snp.blacklist <- strsplit(snp.blacklist, ",")[[1]]
 }
 
-alpha <- if (is.null(opt$alpha)) 0.005 else opt$alpha
-
-stats.file <- opt$statsfile
 seg.file <- opt$segfile
-target.weight.file <- opt$targetweightfile
-normal.panel.vcf.file <- opt$normal_panel
 normalDB <- opt$normaldb
-normal.coverage.file <- opt[["normal"]]
 sampleid <- opt$sampleid
-out <- opt$out
+out <- opt[["out"]]
 pool <- opt$pool
 file.rds <- opt$rds
 
 .getFilePrefix <- function(out, sampleid) {
-    if (file.info(out)$isdir) return(file.path(out, sampleid))
+    isDir <- file.info(out)$isdir
+    if (!is.na(isDir) && isDir) return(file.path(out, sampleid))
     out
 }
 
@@ -115,7 +105,7 @@ if (!is.null(file.rds) && file.exists(file.rds)) {
     if (is.null(out)) out <- sub(".rds$", "", file.rds)
 } else {
     if (is.null(sampleid)) stop("Need --sampleid.")
-    if (is.null(genome)) stop("Need --genome")
+    if (is.null(opt$genome)) stop("Need --genome")
     out <- .getFilePrefix(out, sampleid)    
     file.rds <- paste0(out, ".rds")
     if (is.null(seg.file)) {
@@ -182,17 +172,17 @@ if (file.exists(file.rds) && !opt$force) {
     }     
         
     ret <- runAbsoluteCN(normal.coverage.file=normal.coverage.file, 
-            tumor.coverage.file=tumor.coverage.file, vcf.file=tumor.vcf,
-            sampleid=sampleid, gc.gene.file=gc.gene.file, plot.cnv=TRUE,
-            genome=genome, seg.file=seg.file,
+            tumor.coverage.file=tumor.coverage.file, vcf.file=opt$vcf,
+            sampleid=sampleid, gc.gene.file=opt$gcgene, plot.cnv=TRUE,
+            genome=opt$genome, seg.file=seg.file,
             test.purity=test.purity,
             args.filterVcf=list(snp.blacklist=snp.blacklist, 
-                af.range=af.range, stats.file=stats.file), 
+                af.range=af.range, stats.file=opt$statsfile), 
             fun.segmentation=fun.segmentation,    
-            args.segmentation=list(target.weight.file=target.weight.file, 
-                alpha=alpha), 
+            args.segmentation=list(target.weight.file=opt$targetweightfile, 
+                alpha=opt$alpha), 
             args.setMappingBiasVcf=
-                list(normal.panel.vcf.file=normal.panel.vcf.file),
+                list(normal.panel.vcf.file=opt$normal_panel),
             normalDB=normalDB, model.homozygous=opt$modelhomozygous,
             min.ploidy=opt$minploidy, max.ploidy=opt$maxploidy, 
             model=opt[["model"]], log.file=file.log, 
